// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Using the FelaComponent component should correctly concat a custom class 1`] = `
Array [
  ".a{font-size:12px}.b{color:red}",
  <div
    className="button a b"
  >
    I'm a red button written in 12px.
  </div>,
]
`;

exports[`Using the FelaComponent component should correctly injects the theme to the style function 1`] = `
Array [
  ".a{font-size:12px}.b{color:red}",
  <div
    className="a b"
  >
    I'm red written in 12px.
  </div>,
]
`;

exports[`Using the FelaComponent component should correctly pass children in primitive mode 1`] = `
Array [
  ".a{font-size:12px}.b{color:red}",
  <div
    className="a b"
  >
    I'm red and written in 12px
  </div>,
]
`;

exports[`Using the FelaComponent component should correctly passes all props to the rule 1`] = `
Array [
  ".a{font-size:12px}.b{color:red}",
  <div
    className="a b"
  >
    I'm red written in 12px.
  </div>,
]
`;

exports[`Using the FelaComponent component should correctly render a fela rule 1`] = `
Array [
  ".a{font-size:12px}.b{color:red}",
  <div
    className="a b"
  >
    I am red and written in 12px.
  </div>,
]
`;

exports[`Using the FelaComponent component should correctly render to primitives 1`] = `
Array [
  ".a{font-size:12px}.b{color:red}",
  <span
    className="a b"
  />,
]
`;

exports[`Using the FelaComponent component should correctly render using children as its render function 1`] = `
Array [
  ".a{font-size:12px}.b{color:red}",
  <div
    className="a b"
  >
    I am red and written in 12px.
  </div>,
]
`;
